# visionary

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
.ci/: installOnLinux.sh  installOnOSX.sh
src/: CMakeLists.txt  constants.h  eye-detector.h  face-detector.h  motion-detector-internal.h  motion-detector.cpp  motion-detector.h  object-tracker.h  utility.h
test/: CMakeLists.txt  main.cpp  mock-motion-detector.h  tests-eyedetector.cpp  tests-facedetector.cpp  tests-motiondetector.cpp  tests-objecttracker.cpp  utils.h
